Use selection widget for employee
As the employee can only use records from employees and as now, the client
manage correctly many2one restricted by domain with the selection widget, it
doesn't make sense to use the many2one widget which allow to create instance.

review4911002

--- a/view/user_form.xml
+++ b/view/user_form.xml
@@ -9,7 +9,7 @@ this repository contains the full copyright notices and license terms. -->
         <label name="company"/>
         <field name="company" widget="selection"/>
         <label name="employee"/>
-        <field name="employee"/>
+        <field name="employee" widget="selection"/>
         <field name="employees" colspan="4"/>
     </xpath>
 </data>
